@@ -25,7 +25,9 @@ CHANGELOG
 - Fixed documentation of the different language_support flags.
 - The support for long long suffixes is no longer bound to the variadics mode,
   it has to be enabled by the new long_long mode (default in C99).
-  
+- Fixed compilation if BOOST_WAVE_DUMP_PARSE_TREE is defined.
+- Fixed lexer error message wrt long_long mode.
+
 Sun May  8 17:22:59 WEDT 2005
 Version 1.1.17
 - Added ill_formed_character_literal and ill_formed_integer_literal errors.
